# template_fastapi

./: README.md  pyproject.toml
app/: main.py
app/core/: config.py
app/core/models/: db_helper.py
